--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <!-- Thêm Flatpickr CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-  <!-- Thêm Font Awesome cho icon lịch -->
+  <!-- Thêm Font Awesome cho icon lịch và icon copy -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script defer src="js/constants.js"></script>
   <script defer src="js/main.js"></script>
@@ -67,31 +67,39 @@
       text-decoration: none;
     }
 
-    .detail-table {
-      width: 100%;
-      border-collapse: collapse;
+    .detail-content {
       margin-top: 20px;
-    }
-
-    .detail-table th, .detail-table td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
       font-size: 14px;
     }
 
-    .detail-table th {
-      background-color: #007bff;
-      color: white;
-      width: 30%;
+    .detail-content .detail-row {
+      display: flex;
+      align-items: center;
+      padding: 8px 0;
+      border-bottom: 1px solid #ddd;
     }
 
-    .detail-table td {
-      width: 70%;
+    .detail-content .detail-row:last-child {
+      border-bottom: none;
     }
 
-    .detail-table tr:nth-child(even) {
-      background-color: #f9f9f9;
+    .detail-content .detail-label {
+      font-weight: bold;
+      margin-right: 10px;
+    }
+
+    .detail-content .detail-value {
+      flex: 1;
+    }
+
+    .detail-content .copy-icon {
+      margin-left: 10px;
+      cursor: pointer;
+      color: #007bff;
+    }
+
+    .detail-content .copy-icon:hover {
+      color: #0056b3;
     }
   </style>
 </head>
@@ -242,9 +250,7 @@
       <div class="modal-content">
         <span class="close" onclick="closeModal()">×</span>
         <h2>Chi tiết giao dịch</h2>
-        <table class="detail-table" id="transactionDetailTable">
-          <tbody></tbody>
-        </table>
+        <div class="detail-content" id="transactionDetailContent"></div>
       </div>
     </div>
 
