--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
     .modal {
       display: none;
       position: fixed;
-      z-index: 1;
+      z-index: 100; /* Tăng z-index để modal hiển thị phía trên tất cả */
       left: 0;
       top: 0;
       width: 100%;
