--- a/main.html
+++ b/main.html
@@ -211,6 +211,13 @@
       cursor: pointer;
       color: #007bff;
     }
+
+    /* CSS cho placeholder "Đang tìm kiếm..." */
+    input[placeholder="Đang tìm kiếm..."] {
+      font-style: italic;
+      color: #888;
+      opacity: 0.7;
+    }
   </style>
 </head>
 <body>
