--- a/main.html
+++ b/main.html
@@ -218,6 +218,16 @@
       color: #888;
       opacity: 0.7;
     }
+
+    /* Định dạng mặc định cho các trường input */
+    input[type="text"],
+    input[type="email"],
+    input[type="number"],
+    textarea {
+      font-style: normal;
+      color: #000;
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
