--- a/main.html
+++ b/main.html
@@ -374,6 +374,7 @@
       </tbody>
     </table>
 
+    <!-- Modal để hiển thị chi tiết giao dịch -->
     <div id="transactionDetailModal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeModal()">×</span>
