--- a/index.html
+++ b/index.html
@@ -2,148 +2,24 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ứng dụng với Modal</title>
-  <style>
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.5);
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-content {
-      background-color: #fefefe;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 300px;
-      text-align: center;
-      border-radius: 10px;
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-    }
-
-    button {
-      margin: 5px;
-      padding: 10px;
-    }
-  </style>
+  <title>Đăng nhập</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <button onclick="handleAdd()">Thêm</button>
-  <button onclick="handleUpdate()">Cập nhật</button>
-  <button onclick="handleSearch()">Tìm kiếm</button>
-  <button onclick="handleReset()">Làm mới</button>
+<body class="login-page">
+  <div class="login-container">
+    <h2>Đăng nhập hệ thống</h2>
+    <input type="text" id="employeeCode" placeholder="Mã nhân viên">
 
-  <!-- Modal chung cho thông báo thực thi và kết quả -->
-  <div id="actionModal" class="modal">
-    <div class="modal-content">
-      <span class="close" id="closeModal">&times;</span>
-      <h2 id="modalTitle"></h2>
-      <p id="modalMessage"></p>
+    <div class="password-container">
+      <input type="password" id="password" placeholder="Mật khẩu">
+      <span class="toggle-password" onclick="togglePassword()">👁️</span>
     </div>
+
+    <button onclick="handleLogin()">Đăng nhập</button>
+    <p id="errorMessage" class="error"></p>
   </div>
 
-  <script>
-    // Hàm hiển thị modal "Đang thực thi"
-    function showLoadingModal() {
-      const modal = document.getElementById("actionModal");
-      const title = document.getElementById("modalTitle");
-      const message = document.getElementById("modalMessage");
-      const closeBtn = document.getElementById("closeModal");
-
-      title.innerText = "Đang thực thi";
-      message.innerText = "Vui lòng chờ trong giây lát";
-      closeBtn.style.display = "none"; // Ẩn nút X
-      modal.style.display = "flex"; // Hiển thị modal
-
-      // Vô hiệu hóa tất cả các nút
-      document.querySelectorAll("button").forEach((btn) => {
-        btn.disabled = true;
-      });
-
-      // Ngăn chặn click ra ngoài modal
-      modal.addEventListener("click", preventClose);
-    }
-
-    // Hàm cập nhật modal với kết quả
-    function showResultModal(isSuccess, message) {
-      const modal = document.getElementById("actionModal");
-      const title = document.getElementById("modalTitle");
-      const modalMessage = document.getElementById("modalMessage");
-      const closeBtn = document.getElementById("closeModal");
-
-      title.innerText = isSuccess ? "Thành công" : "Lỗi";
-      modalMessage.innerText = message;
-      closeBtn.style.display = "block"; // Hiện nút X
-
-      // Cho phép đóng modal bằng nút X hoặc click ra ngoài
-      closeBtn.onclick = closeModal;
-      modal.removeEventListener("click", preventClose);
-      modal.addEventListener("click", (e) => {
-        if (e.target === modal) closeModal();
-      });
-
-      // Kích hoạt lại các nút
-      document.querySelectorAll("button").forEach((btn) => {
-        btn.disabled = false;
-      });
-    }
-
-    // Hàm đóng modal
-    function closeModal() {
-      const modal = document.getElementById("actionModal");
-      modal.style.display = "none";
-    }
-
-    // Hàm ngăn chặn đóng modal khi đang thực thi
-    function preventClose(e) {
-      e.stopPropagation();
-    }
-
-    // Hàm xử lý các nút
-    async function handleAdd() {
-      showLoadingModal();
-      await new Promise(resolve => setTimeout(resolve, 2000)); // Giả lập xử lý
-      showResultModal(true, "Đã thêm dữ liệu thành công");
-    }
-
-    async function handleUpdate() {
-      showLoadingModal();
-      await new Promise(resolve => setTimeout(resolve, 2000)); // Giả lập xử lý
-      showResultModal(true, "Đã cập nhật dữ liệu thành công");
-    }
-
-    async function handleSearch() {
-      showLoadingModal();
-      await new Promise(resolve => setTimeout(resolve, 2000)); // Giả lập xử lý
-      showResultModal(true, "Đã tìm kiếm dữ liệu thành công");
-    }
-
-    async function handleReset() {
-      showLoadingModal();
-      await new Promise(resolve => setTimeout(resolve, 2000)); // Giả lập xử lý
-      showResultModal(true, "Đã làm mới dữ liệu thành công");
-    }
-  </script>
+  <script src="js/constants.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
