--- a/main.html
+++ b/main.html
@@ -402,6 +402,16 @@
       </div>
     </div>
 
+    <!-- Modal để hiển thị thông báo xử lý -->
+    <div id="processingModal" class="modal">
+      <div class="modal-content">
+        <h2 id="modalTitle">Thông báo</h2>
+        <p id="modalMessage">Hệ thống đang thực thi...</p>
+        <span id="modalClose" class="close" style="display: none;" onclick="closeProcessingModal()">×</span>
+      </div>
+    </div>
+    
+
     <p id="successMessage"></p>
     <p id="errorMessage"></p>
   </div>
