--- a/main.html
+++ b/main.html
@@ -270,9 +270,10 @@
         <label>Loại giao dịch:</label>
         <select id="transactionType" required>
           <option value="">-- Chọn loại --</option>
-          <option value="Mua hàng">Mua hàng</option>
-          <option value="Nâng gói">Nâng gói</option>
-          <option value="Hoàn hàng">Hoàn hàng</option>
+          <option value="Bán hàng">Bán hàng</option>
+          <option value="Hoàn tiền">Hoàn tiền</option>
+          <option value="Dùng thử">Dùng thử</option>
+          <option value="Nhập hàng">Nhập hàng</option>
         </select>
       </div>
 
