--- a/main.html
+++ b/main.html
@@ -270,10 +270,10 @@
         <label>Loại giao dịch:</label>
         <select id="transactionType" required>
           <option value="">-- Chọn loại --</option>
-          <option value="Bán Hàng">Bán Hàng</option>
+          <option value="Bán hàng">Bán hàng</option>
           <option value="Hoàn Tiền">Hoàn Tiền</option>
-          <option value="Dùng Thử">Dùng Thử</option>
-          <option value="Nhập Hàng">Nhập Hàng</option>
+          <option value="Dùng thử">Dùng thử</option>
+          <option value="Nhập hàng">Nhập hàng</option>
         </select>
       </div>
 
