--- a/main.html
+++ b/main.html
@@ -411,7 +411,19 @@
         <span id="modalClose" class="close" style="display: none;" onclick="closeProcessingModal()">×</span>
       </div>
     </div>
-    
+
+    <!-- Modal xác nhận xóa -->
+    <div id="confirmDeleteModal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeConfirmModal()">×</span>
+        <h2>Xác nhận xóa</h2>
+        <p id="confirmMessage"></p>
+        <div style="text-align: center;">
+          <button onclick="confirmDelete(true)">OK</button>
+          <button onclick="confirmDelete(false)">Cancel</button>
+        </div>
+      </div>
+    </div>
 
     <p id="successMessage"></p>
     <p id="errorMessage"></p>
