--- a/main.html
+++ b/main.html
@@ -412,7 +412,7 @@
       </div>
     </div>
 
-    <!-- Modal xác nhận xóa -->
+    <!-- Modal xác nhận xóa - Giữ nguyên vì đã phù hợp với yêu cầu -->
     <div id="confirmDeleteModal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeConfirmModal()">×</span>
