--- a/main.html
+++ b/main.html
@@ -9,6 +9,16 @@
   <!-- Thêm Font Awesome cho icon lịch, icon copy, icon đăng xuất và icon kính lúp -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script defer src="js/constants.js"></script>
+  <script defer src="js/utils.js"></script>
+  <script defer src="js/addTransaction.js"></script>
+  <script defer src="js/updateTransaction.js"></script>
+  <script defer src="js/searchTransaction.js"></script>
+  <script defer src="js/resetForm.js"></script>
+  <script defer src="js/editTransaction.js"></script>
+  <script defer src="js/deleteTransaction.js"></script>
+  <script defer src="js/viewTransaction.js"></script>
+  <script defer src="js/logout.js"></script>
+  <script defer src="js/pagination.js"></script>
   <script defer src="js/main.js"></script>
   <!-- Thêm Flatpickr JS -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
@@ -412,7 +422,7 @@
       </div>
     </div>
 
-    <!-- Modal xác nhận xóa - Giữ nguyên vì đã phù hợp với yêu cầu -->
+    <!-- Modal xác nhận xóa -->
     <div id="confirmDeleteModal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeConfirmModal()">×</span>
