--- a/index.html
+++ b/index.html
@@ -3,23 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Đăng nhập</title>
+  <!-- Liên kết tới file CSS cho giao diện -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="login-page">
+  <!-- Container chính cho form đăng nhập -->
   <div class="login-container">
     <h2>Đăng nhập hệ thống</h2>
-    <input type="text" id="employeeCode" placeholder="Mã nhân viên">
+    <!-- Trường nhập mã nhân viên với placeholder rõ ràng -->
+    <input type="text" id="employeeCode" placeholder="Nhập mã nhân viên">
 
+    <!-- Container cho trường mật khẩu với nút toggle hiển thị -->
     <div class="password-container">
-      <input type="password" id="password" placeholder="Mật khẩu">
+      <input type="password" id="password" placeholder="Nhập mật khẩu">
       <span class="toggle-password" onclick="togglePassword()">👁️</span>
     </div>
 
+    <!-- Nút đăng nhập -->
     <button onclick="handleLogin()">Đăng nhập</button>
+    <!-- Khu vực hiển thị thông báo lỗi -->
     <p id="errorMessage" class="error"></p>
   </div>
 
+  <!-- Tải các script JavaScript -->
   <script src="js/constants.js"></script>
   <script src="js/login.js"></script>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'932b031faea7bcea',t:'MTc0NTA1MTEzNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
