--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <!-- Tải script JavaScript -->
   <script defer src="js/constants.js"></script>
-  <script defer src="js/main.js"></script>
+  <script src="js/main.js"></script>
   <!-- Thêm Flatpickr JS -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <style>
