--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Đăng nhập</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <title>Đăng nhập hệ thống</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body class="login-page">
   <div class="login-container">
     <h2>Đăng nhập hệ thống</h2>
-    <input type="text" id="employeeCode" placeholder="Mã nhân viên">
-    <input type="password" id="password" placeholder="Mật khẩu">
-    <button onclick="handleLogin()">Đăng nhập</button>
+    <input type="text" id="employeeCode" placeholder="Mã nhân viên" />
+    
+    <div class="password-container">
+      <input type="password" id="password" placeholder="Mật khẩu" />
+      <span class="toggle-password" id="togglePassword">👁️</span>
+    </div>
+
+    <button id="loginButton">Đăng nhập</button>
     <p id="errorMessage" class="error"></p>
   </div>
-  <script src="js/constants.js"></script>
-  <script src="js/login.js"></script>
+
+  <!-- Gọi JS module -->
+  <script type="module" src="js/login.js"></script>
 </body>
 </html>
