--- a/index.html
+++ b/index.html
@@ -1,60 +1,25 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8" />
-  <title>Đăng nhập hệ thống</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body class="login-page">
-  <div class="login-container">
-    <h2>Đăng nhập hệ thống</h2>
-    <input type="text" id="employeeCode" placeholder="Mã nhân viên" />
-    
-    <div class="password-container">
-      <input type="password" id="password" placeholder="Mật khẩu" />
-      <span class="toggle-password" id="togglePassword">👁️</span>
-    </div>
-
-    <button id="loginButton">Đăng nhập</button>
-    <p id="errorMessage" class="error"></p>
-  </div>
-
-  <!-- Gọi JS module -->
-  <script type="module" src="js/login.js"></script>
-</body>
-</html>
-=======
 <!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Đăng nhập</title>
-  <!-- Liên kết tới file CSS cho giao diện -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="login-page">
-  <!-- Container chính cho form đăng nhập -->
   <div class="login-container">
     <h2>Đăng nhập hệ thống</h2>
-    <!-- Trường nhập mã nhân viên với placeholder rõ ràng -->
-    <input type="text" id="employeeCode" placeholder="Nhập mã nhân viên">
-
-    <!-- Container cho trường mật khẩu với nút toggle hiển thị -->
-    <div class="password-container">
-      <input type="password" id="password" placeholder="Nhập mật khẩu">
-      <span class="toggle-password" onclick="togglePassword()">👁️</span>
-    </div>
-
-    <!-- Nút đăng nhập -->
-    <button onclick="handleLogin()">Đăng nhập</button>
-    <!-- Khu vực hiển thị thông báo lỗi -->
-    <p id="errorMessage" class="error"></p>
+    <form id="loginForm">
+      <input type="text" id="employeeCode" placeholder="Nhập mã nhân viên" required>
+      <div class="password-container">
+        <input type="password" id="password" placeholder="Nhập mật khẩu" required>
+        <span class="toggle-password" id="togglePassword">👁️</span>
+      </div>
+      <button type="submit">Đăng nhập</button>
+      <p id="errorMessage" class="error"></p>
+    </form>
   </div>
-
-  <!-- Tải các script JavaScript -->
   <script src="js/constants.js"></script>
   <script src="js/login.js"></script>
 </body>
 </html>
->>>>>>> ac47a461625a53a6b9eeca560f0c5385c0dbd876
